update login dan profile affiliator

--- a/display_all.html
+++ b/display_all.html
@@ -91,6 +91,7 @@
             });
     
             var socket = new WebSocket("ws://localhost:9191");
+            socket.onopen = () => socket.send('/display');
 
             socket.onmessage = function(event) {
                 const jsonData = JSON.parse(event.data);
