--- a/display_all.html
+++ b/display_all.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Karyawan</title>
+    <title>Daftar Hadir Undangan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.9/jquery.jgrowl.min.css">
 </head>
 <body>
     <div class="container mt-5">
@@ -50,7 +49,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.9/jquery.jgrowl.min.js"></script>
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=47i1xMPf"></script>
     <script>
         $(document).ready(function() {
@@ -90,7 +88,7 @@
                 "order": [[ 6, 'desc' ]],
             });
     
-            var socket = new WebSocket("ws://localhost:9191");
+            var socket = new WebSocket("ws://192.168.20.40:9191");
             socket.onopen = () => socket.send('/display');
 
             socket.onmessage = function(event) {
@@ -101,7 +99,7 @@
             $('#table tbody').on('click', '#btn-play', function () {
                 console.log(this);
                 const data = table.row($(this).closest('tr')).data();
-                const text = 'Selamat Datang ' + data.Nama + ', ' + data.Jabatan + ' dari ' + data.Perusahaan;
+                const text = 'Selamat Datang ' + data.TTS + ' dari ' + data.Perusahaan;
                 responsiveVoice.speak(text);
             });
 
