--- a/peresmian_trigger.html
+++ b/peresmian_trigger.html
@@ -1,55 +1,97 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>WebSocket Chat</title>
 
-    <style>
-        body {
-          text-align: center;
-        }
-      
-        .center {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          height: 30vh;
-        }
-      
-        input, button {
-          font-size: 48px;
-        }
-      </style>
+<head>
+  <title>Peresmian TS Smart Building</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    .hand-button {
+      /* height: 90vh; */
+      /* background-image: url('hand-image.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center; */
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+      font-size: 80vh;
+      padding: 0;
+      color: red;
+    }
+
+    /* .hand-button:hover {
+      transform: scale(1.1);
+      background-color: #007bff;
+      color: red;
+      font-size: 550px;
+    } */
+  </style>
 
 </head>
+
 <body>
-    <button id="sendButton">Trigger Video Peresmian</button>
+  <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <i id="sendButton" class="fa-solid fa-hand hand-button"></i>
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    var socket = new WebSocket("ws://192.168.20.40:9191");
+    let interval;
+    socket.onopen = () => socket.send('/peresmian_trigger');
 
-    <script>
-        var socket = new WebSocket("ws://localhost:9191");
-        socket.onopen = () => socket.send('/peresmian_trigger');
+    socket.onmessage = function (event) {
+      // var chat = document.getElementById("chat");
+      // chat.innerHTML = "<p>" + event.data + "</p>" + chat.innerHTML;
 
-        socket.onmessage = function(event) {
-            // var chat = document.getElementById("chat");
-            // chat.innerHTML = "<p>" + event.data + "</p>" + chat.innerHTML;
+      console.log('Hi')
+    };
 
-            console.log('Hi')
-        };
+    function sendMessage() {
+      const message = "PUZZLE";
+      socket.send("message");
+      console.log(message);
+    }
 
-        function sendMessage() {
-            const message = "PUZZLE";
-            socket.send("message");
-            console.log(message);
-        }    
+    function touchDown() {
+      const btn = document.getElementById('sendButton');
+      btn.style.color = 'green';
+      btn.style.fontSize = '75vh';
 
-        // Menambahkan event listener untuk mengeksekusi sendMessage setelah dokumen selesai dimuat
-        // document.addEventListener("DOMContentLoaded", function() {
-        //     sendMessage();
-        // });
+      let i = 0;
+      interval = setInterval(function () {
+        console.log(i);
+        if (i == 3) {
+          sendMessage();
+          touchUp();
+        }
+        i++;
+      }, 200);
+    }
 
-        var sendButton = document.getElementById("sendButton");
-            sendButton.addEventListener("click", sendMessage);
+    function touchUp() {
+      const btn = document.getElementById('sendButton');
+      btn.style.color = 'red';
+      btn.style.fontSize = '80vh';
+      clearInterval(interval);
+    }
 
-    </script>
+    // Menambahkan event listener untuk mengeksekusi sendMessage setelah dokumen selesai dimuat
+    // document.addEventListener("DOMContentLoaded", function() {
+    //     this.requestFullscreen();
+    // });
+
+    // document.getElementById("sendButton").addEventListener("click", sendMessage);
+
+    document.getElementById('sendButton').addEventListener('mousedown', touchDown);
+    document.getElementById('sendButton').addEventListener('mouseup', touchUp);
+    document.getElementById('sendButton').addEventListener('touchstart', touchDown);
+    document.getElementById('sendButton').addEventListener('touchend', touchUp);
+
+
+  </script>
 </body>
+
 </html>
