--- a/puzzle_trigger.html
+++ b/puzzle_trigger.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>WebSocket Chat</title>
 
-    <style>
-        body {
-          text-align: center;
-        }
-      
-        .center {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          height: 30vh;
-        }
-      
-        input, button {
-          font-size: 48px;
-        }
-      </style>
+<head>
+  <title>Puzzle Start</title>
+
+  <style>
+    input,
+    button {
+      font-size: 48px;
+    }
+  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
+
 <body>
-    <button id="sendButton">Trigger Puzzle</button>
+  <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <div class="row">
+      <div class="col">
+        <button class="btn btn-primary" id="sendButton" style="display: none;">Trigger Puzzle</button>
+        <h3>Berhasil!</h3>
+      </div>
+    </div>
+  </div>
 
-    <script>
-        var socket = new WebSocket("ws://localhost:9191");
-        socket.onopen = () => socket.send('/puzzle_trigger');
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    var socket = new WebSocket("ws://192.168.20.40:9191");
+    // socket.onopen = () => socket.send('/puzzle_trigger');
+    socket.onopen = function (event) {
+      socket.send('/puzzle_trigger');
+      sendMessage()
+    };
 
-        socket.onmessage = function(event) {
-            // var chat = document.getElementById("chat");
-            // chat.innerHTML = "<p>" + event.data + "</p>" + chat.innerHTML;
+    socket.onmessage = function (event) {
+      // var chat = document.getElementById("chat");
+      // chat.innerHTML = "<p>" + event.data + "</p>" + chat.innerHTML;
 
-            console.log('Hi')
-        };
+      console.log('Hi')
+    };
 
-        function sendMessage() {
-            const message = "PUZZLE";
-            socket.send("message");
-            console.log(message);
-        }    
+    function sendMessage() {
+      const message = "PUZZLE";
+      socket.send("message");
+      console.log(message);
+    }
 
-        // Menambahkan event listener untuk mengeksekusi sendMessage setelah dokumen selesai dimuat
-        // document.addEventListener("DOMContentLoaded", function() {
-        //     sendMessage();
-        // });
+    // Menambahkan event listener untuk mengeksekusi sendMessage setelah dokumen selesai dimuat
+    // document.addEventListener("DOMContentLoaded", function() {
+    //     sendMessage();
+    // });
 
-        var sendButton = document.getElementById("sendButton");
-            sendButton.addEventListener("click", sendMessage);
-
-    </script>
+    var sendButton = document.getElementById("sendButton");
+    sendButton.addEventListener("click", sendMessage);
+  </script>
 </body>
+
 </html>
