--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     var isSudahSetNickName = false;
-    var socket = new WebSocket("ws://192.168.20.40:9191");
+    var socket = new WebSocket("wss://192.168.21.5/wss2/");
     socket.onopen = () => socket.send('/checkin');
     
     socket.onmessage = function(event) {
