--- a/peresmian_trigger.html
+++ b/peresmian_trigger.html
@@ -38,7 +38,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    var socket = new WebSocket("ws://192.168.20.40:9191");
+    var socket = new WebSocket("wss://192.168.21.5/wss2/");
     let interval;
     socket.onopen = () => socket.send('/peresmian_trigger');
 
@@ -50,7 +50,7 @@
     };
 
     function sendMessage() {
-      const message = "PUZZLE";
+      const message = "PERESMIAN";
       socket.send("message");
       console.log(message);
     }
