--- a/puzzle_trigger.html
+++ b/puzzle_trigger.html
@@ -27,7 +27,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    var socket = new WebSocket("ws://192.168.20.40:9191");
+    var socket = new WebSocket("wss://192.168.21.5/wss2/");
     // socket.onopen = () => socket.send('/puzzle_trigger');
     socket.onopen = function (event) {
       socket.send('/puzzle_trigger');
