--- a/display.html
+++ b/display.html
@@ -5,30 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selamat Datang Undangan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        @media (min-width: 1400px) {
+            .h1, h1 {
+                font-size: calc(3rem + 2vw);
+            }
+
+            .h4, h4 {
+                font-size: calc(1.5rem + 2vw);
+            }
+
+            .h5, h5 {
+                font-size: calc(1rem + 2vw);
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="main" class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div id="default" class="row text-center">
+        <div id="default" class="row text-center" style="display: none;">
             <div class="col">
                 <h1>Check In with Your QR Code</h1>
                 <h5>Show your QR Code to the Camera</h5>
                 <img src="image/default-qr.png" class="w-25" alt="QR Code">
             </div>
         </div>
-        <div id="data" class="row" style="display: none;">
+        <div id="data" class="row">
             <div class="col p-3">
                 <h1 class="text-center">Welcome to Grand Launching</h1>
-                <h4 class="text-center">TS SMART BUILDING</h4>
-                <div class="mb-3 mt-3">
+                <h4 class="text-center">TS SMART OFFICE</h4>
+                <div class="mb-3 mt-5">
                     <div class="form-floating">
-                        <input class="form-control fs-4" type="text" id="nama" disabled>
-                        <label for="nama">Nama Lengkap</label>
+                        <input class="form-control fs-2" type="text" id="nama" value="Yanuar Aji Candra" style="letter-spacing: 3px;" disabled>
+                        <label class="fs-5" for="nama">Nama Lengkap</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <div class="form-floating">
-                        <input class="form-control fs-4" type="text" id="perusahaan" disabled>
-                        <label for="perusahaan">Instansi</label>
+                        <input class="form-control fs-2" type="text" id="perusahaan" value="PT Tiga Serangkai Inti Corpora" style="letter-spacing: 3px;" disabled>
+                        <label class="fs-5" for="perusahaan">Instansi</label>
                     </div>
                 </div>
             </div>
