--- a/display_all.html
+++ b/display_all.html
@@ -9,13 +9,29 @@
 </head>
 <body>
     <div class="container mt-5">
+        <div class="input-group mt-5">
+            <select class="form-select" id="voiceselection"></select>
+            <button type="button" class="btn btn-sm btn-success" id="set-voice">Set Default Voice</button>
+        </div>
+        <div class="input-group mt-2">
+            <div class="form-floating">
+                <input class="form-control" type="text" name="input-manual" id="input-manual" placeholder="Tuliskan kata ...">
+                <label for="input-manual">Text to Speech</label>
+            </div>
+            <button type="button" class="btn btn-sm btn-success" id="play-manual">Play Speech</button>
+        </div><br><hr>
         <h1>Daftar Hadir Undangan</h1>
+        <div class="d-flex justify-content-between my-3">
+            <button type="button" class="btn btn-sm btn-info" id="play-checked">Generate Checked</button>
+            <button type="button" class="btn btn-sm btn-success" id="check-all">Check All</button>
+            <button type="button" class="btn btn-sm btn-danger" id="uncheck-all">Uncheck All</button>
+        </div>
         <div class="table-responsive">
-            <table class="table table-striped table-bordered" id="table">
+            <table class="table table-striped table-bordered w-100" id="table">
                 <thead>
                     <tr>
                         <th>Check</th>
-                        <th>NIP</th>
+                        <th>No Undangan</th>
                         <th>Sapaan</th>
                         <th>Nama</th>
                         <th>Perusahaan</th>
@@ -27,19 +43,6 @@
                 <tbody id="tabelData">
                 </tbody>
             </table>
-        </div>
-        <button type="button" class="btn btn-sm btn-info" id="play-checked">Generate Checked</button><br>
-
-        <div class="input-group mt-5">
-            <select class="form-select" id="voiceselection"></select>
-            <button type="button" class="btn btn-sm btn-success" id="set-voice">Set Default Voice</button>
-        </div>
-        <div class="input-group mt-2">
-            <div class="form-floating">
-                <input class="form-control" type="text" name="input-manual" id="input-manual" placeholder="Tuliskan kata ...">
-                <label for="input-manual">Text to Speech</label>
-            </div>
-            <button type="button" class="btn btn-sm btn-success" id="play-manual">Play Speech</button>
         </div>
     </div>
 
@@ -83,6 +86,12 @@
                         render: function (data, type, row, meta) {
                             return '<button class="btn btn-sm btn-success" id="btn-play">Play Speech</button><br><button class="btn btn-sm btn-danger" id="btn-cancel" onclick="responsiveVoice.cancel();">Cancel Speech</button>';
                         }
+                    }
+                ],
+                "columnDefs": [
+                    {
+                        "targets": 0,
+                        className: "text-center"
                     }
                 ],
                 "order": [[ 6, 'desc' ]],
@@ -147,6 +156,18 @@
                 }
                 $('#input-manual').val(text);
             })
+
+            $('#check-all').on('click', function () {
+                $('[name="check[]"]').prop('checked', true);
+            });
+
+            $('#uncheck-all').on('click', function () {
+                const len = $('[name="check[]"]:checked').length;
+                // console.log('Checked: '+len);
+                if (len > 0) {
+                    $('[name="check[]"]:checked').prop('checked', false);
+                }
+            });
 
             $('#set-voice').on('click', function () {
                 const text = vselect.val();
