--- a/peresmian_trigger.html
+++ b/peresmian_trigger.html
@@ -6,33 +6,26 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="firework.css" rel="stylesheet">
   <style>
     .hand-button {
-      /* height: 90vh; */
-      /* background-image: url('hand-image.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center; */
       cursor: pointer;
       transition: all 0.2s ease-in-out;
       font-size: 80vh;
       padding: 0;
       color: red;
     }
-
-    /* .hand-button:hover {
-      transform: scale(1.1);
-      background-color: #007bff;
-      color: red;
-      font-size: 550px;
-    } */
   </style>
 
 </head>
 
 <body>
-  <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
+  <div class="container-fluid d-flex align-items-center justify-content-center overflow-hidden" style="height: 100vh; background: #000;">
     <i id="sendButton" class="fa-solid fa-hand hand-button"></i>
+    <div id="firework" style="display: none;">
+      <div class="before"></div>
+      <div class="after"></div>
+    </div>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
@@ -63,12 +56,15 @@
       let i = 0;
       interval = setInterval(function () {
         console.log(i);
-        if (i == 3) {
+        if (i == 2) {
           sendMessage();
           touchUp();
+          btn.style.display = 'none';
+          document.getElementById('firework').style.display = 'block';
+          document.getElementById('firework').classList.add('pyro');
         }
         i++;
-      }, 200);
+      }, 700);
     }
 
     function touchUp() {
@@ -78,18 +74,10 @@
       clearInterval(interval);
     }
 
-    // Menambahkan event listener untuk mengeksekusi sendMessage setelah dokumen selesai dimuat
-    // document.addEventListener("DOMContentLoaded", function() {
-    //     this.requestFullscreen();
-    // });
-
-    // document.getElementById("sendButton").addEventListener("click", sendMessage);
-
     document.getElementById('sendButton').addEventListener('mousedown', touchDown);
     document.getElementById('sendButton').addEventListener('mouseup', touchUp);
     document.getElementById('sendButton').addEventListener('touchstart', touchDown);
     document.getElementById('sendButton').addEventListener('touchend', touchUp);
-
 
   </script>
 </body>
