--- a/display.html
+++ b/display.html
@@ -23,26 +23,26 @@
 </head>
 <body>
     <div id="main" class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div id="default" class="row text-center" style="display: none;">
+        <div id="default" class="row text-center">
             <div class="col">
                 <h1>Check In with Your QR Code</h1>
                 <h5>Show your QR Code to the Camera</h5>
                 <img src="image/default-qr.png" class="w-25" alt="QR Code">
             </div>
         </div>
-        <div id="data" class="row">
+        <div id="data" class="row" style="display: none;">
             <div class="col p-3">
                 <h1 class="text-center">Welcome to Grand Launching</h1>
                 <h4 class="text-center">TS SMART OFFICE</h4>
                 <div class="mb-3 mt-5">
                     <div class="form-floating">
-                        <input class="form-control fs-2" type="text" id="nama" value="Yanuar Aji Candra" style="letter-spacing: 3px;" disabled>
+                        <input class="form-control fs-2" type="text" id="nama" style="letter-spacing: 3px;" disabled>
                         <label class="fs-5" for="nama">Nama Lengkap</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <div class="form-floating">
-                        <input class="form-control fs-2" type="text" id="perusahaan" value="PT Tiga Serangkai Inti Corpora" style="letter-spacing: 3px;" disabled>
+                        <input class="form-control fs-2" type="text" id="perusahaan" style="letter-spacing: 3px;" disabled>
                         <label class="fs-5" for="perusahaan">Instansi</label>
                     </div>
                 </div>
