--- a/display.html
+++ b/display.html
@@ -6,6 +6,10 @@
     <title>Selamat Datang Undangan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            font-size: xx-large;
+        }
+
         @media (min-width: 1400px) {
             .h1, h1 {
                 font-size: calc(3rem + 2vw);
@@ -25,24 +29,24 @@
     <div id="main" class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
         <div id="default" class="row text-center">
             <div class="col">
-                <h1>Check In with Your QR Code</h1>
-                <h5>Show your QR Code to the Camera</h5>
+                <h1 class="display-1 fw-bold">Check In with Your QR Code</h1>
+                <h5 class="display-3 fw-medium">Show your QR Code to the Camera</h5>
                 <img src="image/default-qr.png" class="w-25" alt="QR Code">
             </div>
         </div>
         <div id="data" class="row" style="display: none;">
             <div class="col p-3">
-                <h1 class="text-center">Welcome to Grand Launching</h1>
-                <h4 class="text-center">TS SMART OFFICE</h4>
+                <h1 class="text-center display-3 fw-medium">Welcome to Grand Launching</h1>
+                <h4 class="text-center display-1 fw-bold">Tiga Serangkai SMART Office</h4>
                 <div class="mb-3 mt-5">
                     <div class="form-floating">
-                        <input class="form-control fs-2" type="text" id="nama" style="letter-spacing: 3px;" disabled>
+                        <input class="form-control fs-3 fw-bold py-5" type="text" id="nama" style="letter-spacing: 2px;" disabled>
                         <label class="fs-5" for="nama">Nama Lengkap</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <div class="form-floating">
-                        <input class="form-control fs-2" type="text" id="perusahaan" style="letter-spacing: 3px;" disabled>
+                        <input class="form-control fs-2 py-5" type="text" id="perusahaan" style="letter-spacing: 2px;" disabled>
                         <label class="fs-5" for="perusahaan">Instansi</label>
                     </div>
                 </div>
