--- a/display.html
+++ b/display.html
@@ -35,18 +35,19 @@
             </div>
         </div>
         <div id="data" class="row" style="display: none;">
-            <div class="col p-3">
+            <div class="col">
                 <h1 class="text-center display-3 fw-medium">Welcome to Grand Launching</h1>
                 <h4 class="text-center display-1 fw-bold">Tiga Serangkai SMART Office</h4>
+                <br>
                 <div class="mb-3 mt-5">
                     <div class="form-floating">
-                        <input class="form-control fs-3 fw-bold py-5" type="text" id="nama" style="letter-spacing: 2px;" disabled>
+                        <input class="form-control fs-1 fw-bolder py-5" type="text" id="nama" style="letter-spacing: 2px;" disabled>
                         <label class="fs-5" for="nama">Nama Lengkap</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <div class="form-floating">
-                        <input class="form-control fs-2 py-5" type="text" id="perusahaan" style="letter-spacing: 2px;" disabled>
+                        <input class="form-control fs-2 fw-medium py-5" type="text" id="perusahaan" style="letter-spacing: 2px;" disabled>
                         <label class="fs-5" for="perusahaan">Instansi</label>
                     </div>
                 </div>
