--- a/display.html
+++ b/display.html
@@ -27,14 +27,14 @@
 </head>
 <body>
     <div id="main" class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div id="default" class="row text-center" style="display: none;">
+        <div id="default" class="row text-center">
             <div class="col">
                 <h1 class="display-1 fw-bold">Check In with Your QR Code</h1>
                 <h5 class="display-3 fw-medium">Show your QR Code to the Camera</h5>
                 <img src="image/default-qr.png" class="w-25" alt="QR Code">
             </div>
         </div>
-        <div id="data" class="row">
+        <div id="data" class="row" style="display: none;">
             <div class="col">
                 <h1 class="text-center display-3 fw-medium mb-3">Welcome to Grand Launching</h1>
                 <h4 class="text-center display-1 fw-bold mb-5">Tiga Serangkai SMART Office</h4>
